--- a/home.html
+++ b/home.html
@@ -25,30 +25,31 @@
             <div class="podcast-card">
                 <img src="img/jeferson.jpg" alt="Podcast 1">
                 <h3> JEFERSON E SUELLEN - RUMO AO ALTAR</h3>
-                <p> o casal iniciou um projeto chamado "Rumo ao Altar". Através de vídeos, eles documentaram cada etapa da preparação para o casamento, desde a seleção de itens até a gestão de orçamentos, proporcionando um guia valioso para aqueles que os seguiam. Com o tempo, o projeto se expandiu para incluir vídeos de louvores e hinos, com Jefferson e Suellen unindo suas vozes em harmonia ao som de violão.</p> <a href="https://www.youtube.com/watch?v=BcaZcgMTjuI" class="btn-clique-aqui">Clique aqui</a>
+                <p> O casal iniciou um projeto chamado "Rumo ao Altar". Através de vídeos, eles documentaram cada etapa da preparação para o casamento, desde a seleção de itens até a gestão de orçamentos...</p> 
+                <a href="https://www.youtube.com/watch?v=BcaZcgMTjuI" class="btn-clique-aqui">Clique aqui</a>
             </div>
             <div class="podcast-card">
                 <img src="img/gabrielarocha.jpg" alt="Podcast 2">
                 <h3>GABRIELA ROCHA - DESAFIOS NA VIDA CRISTÃ</h3>
-                <p>Música e fé andam lado a lado. Louvar é uma das melhores formas de nos aproximar de Deus, de fortalecer essa conexão com o Senhor, tão importante - até essencial. Por isso, chegou a hora de a Karina receber a linda cantora Gabriela Rocha, que vem ao Positivamente falar sobre música, seu dom de encantar pela voz, seu testemunho de vida e muito, muito mais! Aperte o play e acompanhe o bate papo com todo o seu coração!</p> <a href="https://www.youtube.com/watch?app=desktop&v=3Ea3utNm25c" class="btn-clique-aqui">Clique aqui</a>
+                <p>Música e fé andam lado a lado. Louvar é uma das melhores formas de nos aproximar de Deus...</p> 
+                <a href="https://www.youtube.com/watch?app=desktop&v=3Ea3utNm25c" class="btn-clique-aqui">Clique aqui</a>
             </div>
-            <!-- Adicione mais cartões conforme necessário -->
             <div class="podcast-card">
                 <img src="img/aline.jpg" alt="Podcast 2">
                 <h3>ALINE BARROS - GLORYCAST</h3>
-                <p>Neste episódio do GloryCast você poderá ouvir diversas histórias e testemunhos compartilhados sobre a vida da nossa embaixadora, a Aline Barros! Ela, que marcou uma geração de crianças e adultos com sua adoração, teve um bate-papo super edificante com a Lu Alone!</p> <a href="https://www.youtube.com/watch?v=CGWclmsvG8M" class="btn-clique-aqui">Clique aqui</a>
+                <p>Neste episódio do GloryCast você poderá ouvir diversas histórias e testemunhos compartilhados...</p> 
+                <a href="https://www.youtube.com/watch?v=CGWclmsvG8M" class="btn-clique-aqui">Clique aqui</a>
             </div>
             <div class="podcast-card">
-                <img src="img/sampaio.jpg" alt="Podcast 2">
+                <img src="img/sampaio.jpg" alt="Gabi Sampaio">
                 <h3>GABI SAMPAIO - GLORYCAST</h3>
-                <p>Nossa convidada de hoje, Gabi Sampaio, é uma adoradora que tem se dedicado a levar a Palavra de Deus por meio de sua voz. Com este bate-papo você será inspirado e abençoado, então não deixe passar!
-                </p>  <a href="Nossa convidada de hoje, Gabi Sampaio, é uma adoradora que tem se dedicado a levar a Palavra de Deus por meio de sua voz. Com este bate-papo você será inspirado e abençoado, então não deixe passar!
-                " class="https://www.youtube.com/watch?v=Z9u7cRFC-rI">Clique aqui</a>
+                <p>Nossa convidada de hoje, Gabi Sampaio, é uma adoradora que tem se dedicado a levar a Palavra de Deus por meio de sua voz...</p>
+                <a href="https://www.youtube.com/watch?v=Z9u7cRFC-rI&t=191s" class="btn-clique-aqui">Clique aqui</a>
             </div> 
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Poocast. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Podcast. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
